--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -2,32 +2,32 @@
   {
     "title": "Kinetica",
     "category": "bas niveau",
-    "description": "Moteur physique 2D/3D haute performance pour la simulation de corps rigides (rigid bodies). Implémentation d'algorithmes de détection de collisions optimisés et de résolution de contraintes physiques réalistes.",
+    "description": "Moteur physique 2D pour la simulation de corps rigides. Implémentation d'algorithmes de détection de collisions optimisés et de résolution de contraintes physiquement réalistes.",
     "image": "assets/images/project-kinetica.png",
     "tags": ["C++", "Algorithmie", "Physique", "Optimisation"],
     "link": "https://github.com/ChiroYuPy/Kinetica",
     "featured": true,
-    "year": "2024"
+    "year": "2024-Ajd"
   },
   {
     "title": "AshenEngine",
     "category": "bas niveau",
     "description": "Moteur de rendu 2D/3D unifié avec abstraction des API graphiques (OpenGL, Vulkan) et des systèmes de fenêtrage. Architecture modulaire permettant le développement multi-plateforme avec gestion optimisée des ressources.",
     "image": "assets/images/project-ashen.png",
-    "tags": ["C++", "OpenGL", "Vulkan", "Architecture"],
+    "tags": ["C++", "OpenGL", "Architecture", "Programmation graphique"],
     "link": "https://github.com/ChiroYuPy/AshenEngine",
     "featured": true,
-    "year": "2024"
+    "year": "2024-Ajd"
   },
   {
     "title": "Voxelity",
     "category": "jeux",
-    "description": "Jeu de type voxel 3D moddable avec génération procédurale de terrain, système de chunks optimisé et rendu haute performance. Basé sur AshenEngine avec support de mods et multijoueur prévu.",
+    "description": "Jeu de type voxel 3D moddable avec génération procédurale de terrain, rendu de monde optimisé. Utilisant AshenEngine avec support de mods prévus et intégré au moteur.",
     "image": "assets/images/project-voxelity.png",
-    "tags": ["C++", "OpenGL", "Procédural", "3D"],
+    "tags": ["C++", "OpenGL", "Génération procédurale", "3D"],
     "link": "https://github.com/ChiroYuPy/AshenEngine/tree/master/Voxelity",
     "featured": true,
-    "year": "2024"
+    "year": "2024-Ajd"
   },
   {
     "title": "ResQ360",
@@ -40,39 +40,51 @@
     "year": "2024"
   },
   {
+    "title": "Centre Resource Autisme Bretagne",
+    "category": "applications",
+    "description": "Application complète de gestion des interventions d'urgence avec géolocalisation en temps réel, système de notifications push, tableaux de bord analytiques et gestion multi-utilisateurs avec différents rôles.",
+    "image": "assets/images/project-hem.png",
+    "tags": ["HTML", "CSS", "JavaScript","SQL", "API REST"],
+    "link": "#",
+    "featured": true,
+    "year": "2025-Ajd"
+  },
+  {
     "title": "MatterPy",
     "category": "simulations",
     "description": "Moteur physique léger développé en Python pour l'expérimentation et la visualisation de simulations physiques. Idéal pour l'apprentissage et le prototypage rapide d'algorithmes physiques.",
     "image": "assets/images/project-matter.png",
     "tags": ["Python", "Simulation", "Pygame"],
     "link": "https://github.com/ChiroYuPy/MatterPy",
+    "featured": true,
     "year": "2023"
   },
   {
-    "title": "Minecraft RPG Server",
+    "title": "Minecraft Plugins",
     "category": "jeux",
-    "description": "Suite complète de plugins Java pour serveur Minecraft : système de classes personnalisées, quêtes dynamiques, économie virtuelle avec API REST pour intégration web. Gestion avancée des joueurs et des événements.",
+    "description": "Suite de plugins Java pour serveur Minecraft pour gérer son serveur éfficacement, ajout de fonctionalités pour admin et d'autres pour joueur ",
     "image": "assets/images/project-minecraft.png",
-    "tags": ["Java", "Spigot API", "MySQL", "API REST"],
-    "link": "https://github.com/ChiroYuPy/MinecraftRPG",
+    "tags": ["Java", "MySQL", "Spigot/Bukkit"],
+    "link": "#",
     "year": "2022-2024"
   },
   {
     "title": "Rythial",
     "category": "jeux",
-    "description": "Jeu de rythme développé en Python avec Pygame. Gameplay inspiré des jeux musicaux classiques avec détection précise des inputs, système de score et gestion de beatmaps personnalisées.",
+    "description": "Jeu de rythme développé en Python avec Pygame. Gameplay inspiré des jeux de rythme classiques avec détection précise des inputs, système de score et gestion de beatmaps personnalisées.",
     "image": "assets/images/project-rythial.png",
     "tags": ["Python", "Pygame", "Audio"],
-    "link": "#",
-    "year": "2023"
+    "link": "https://github.com/ChiroYuPy/Rythia",
+
+    "year": "2022"
   },
   {
     "title": "Portfolio Personnel",
     "category": "web",
-    "description": "Site portfolio responsive moderne avec mode sombre, design épuré et animations fluides. Architecture modulaire en JavaScript vanilla pour des performances optimales.",
+    "description": "Site portfolio simple et fonctionnel. Configuration des informations en json pour une configuration facile et rapide.",
     "image": "assets/images/project-portfolio.png",
     "tags": ["HTML", "CSS", "JavaScript", "Responsive"],
-    "link": "#",
+    "link": "https://github.com/ChiroYuPy/chiroyupy",
     "year": "2024"
   }
 ]
